# edmonds-matching

./: .gitignore  ChangeLog.md  DIMACSParser.hs  LICENSE  Main.hs  Matching.hs  Parser.hs  README.md  TODO  Tests.hs  Tree.hs  cabal.config  edmonds-matching.cabal  edmonds-matching.prof  edmonds.cabal  notes.md  stack.yaml  todo.org
app/: Main.hs
data/: C5.dmx  K3-v2.dmx  Tree.dmx  bipartite-simple-v2.dmx  bipartite-simple.dmx  bipartite.dmx  notes  optima-stripped.txt  optima.txt
data/graphs/: K2-v2.dmx  K2.dmx  K4-v2.dmx  P4.dmx  butterfly-extended.dmx  pbd984_matching_maximal.dmx  peterson.dmx  pma343_matching_maximal.dmx  queen10_10_matching_maximal.dmx  queen27_27_matching_maximal.dmx  queen5_5_matching_maximal.dmx  queen6_6_matching_maximal.dmx  queen7_7_matching_maximal.dmx  queen9_9_matching_maximal.dmx
data/graphs/matchings/: ei8246_matching_maximal.dmx  fixed_matching_maximal.dmx  lu980_matching_maximal.dmx  queen11_11_matching_maximal.dmx  queen16_16_matching_maximal.dmx  queen4_4_matching_maximal.dmx  queen8_8_matching_maximal.dmx
data/runtimes/100-sparse/: ec  gm  no
data/runtimes/1000-dense/: ec  gm  no
data/runtimes/1000-sparse/: ec  gm  no
data/runtimes/batch1/: ec  gm  no
notes/: heuristics.md  presentation.md
prof/: edmonds-matching-EC.prof  edmonds-matching-GM.prof  edmonds-matching-NO.prof  result
scripts/: a.out  compare-heuristics-all.sh  compare-heuristics.sh  fetchdata.sh  format-dir.sh  format-file.sh  graph.cpp  graph.hpp  main.cpp  run.sh  test-on-dir.sh  time-algorithm-all.sh  time-algorithm.sh
src/: Analyzer.hs  DIMACSParser.hs  Edmonds.hs  Generator.hs  Graph.hs  Logger.hs  Main.hs  Matching.hs  Parser.hs  Sundlude.hs  Tests.hs  Types.hs  Util.hs
src/Algorithm/Edmonds/: Core.hs
src/Algorithm/Edmonds/Bipartite/: Core.hs
src/Algorithm/Edmonds/General/: Core.hs  Helpers.hs
src/Algorithm/Heuristics/: Core.hs  ExpandContract.hs  MaximalMatching.hs
src/Data/: AlternatingForest.hs
src/Data/Graph/: Core.hs
src/Edmond/: Algorithm.hs  Assoc.hs  Graph.hs  State.hs  Vertex.hs
src/Edmond/Algorithm/: Core.hs  Helpers.hs  Heuristics.hs
src/Edmond/Algorithm/Bipartite/: Core.hs
src/Edmond/Algorithm/General/: Core.hs  Helpers.hs
src/Edmond/Algorithm/Heuristics/: BGraphMaximumMatching.hs  Core.hs  ExpandContract.hs  MaximalMatching.hs
src/Edmond/Data/: AlternatingForest.hs  Assoc.hs  Graph.hs  Vertex.hs
src/Edmond/Data/Graph/: Core.hs
test/: Generator.hs  Spec.hs  TestAlgorithm.hs  TestDIMACSParser.hs  TestGeneral.hs  TestGraph.hs  TestHeuristics.hs  TestMain.hs  TestParser.hs  TestUtil.hs  Tests.hs
