name:                edmonds-matching
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/edmonds-matching#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable edmonds-matching
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       unordered-containers,
                       hashable,
                       text,
                       protolude,
                       array
  default-extensions:  NoImplicitPrelude

  exposed-modules:    Edmond.Algorithm.Core,
                      Parser

  other-modules:        Edmond.Algorithm.Core 
                        Edmond.Algorithm.Helpers,
                        Edmond.Algorithm.Heuristics,
                        Edmond.Data.AlternatingForest,
                        Edmond.Data.Graph,
                        Parser,
                        Util
