name:                   edmonds-matching
version:                0.1.0.0
synopsis:               An implementation of a maximum-matching algorithm
description:            An implementation of Jack Edmonds famous blossom
                        algorihm for finding maximum matchings of unweighted
                        graphs, as proposed in 1961. 
                        The implementation follows the specifications given in
                        Combinatorial Optimization by Korte and Vygen 2001.
homepage:               https://github.com/lsund/edmonds-matching
license:                BSD3
license-file:           LICENSE
author:                 Ludvig Sundström
maintainer:             lud.sund@gmail.com
copyright:              2017 Ludvig Sundström
category:               Algorithm
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >= 1.10

source-repository head
    type:     git
    location: https://github.com/lsund/edmonds-matching

executable edmonds-matching
    hs-source-dirs:     src

    main-is:            Main.hs

    ghc-options:        -threaded -rtsopts -with-rtsopts=-N -O2

    build-depends:      base,
                        protolude,
                        containers,
                        ghc-prim,
                        text,
                        bytestring,
                        mtl,
                        stm,
                        hashable,
                        async,
                        deepseq,
                        safe,
                        random,
                        directory,
                        array,
                        vector,
                        split

    default-language:   Haskell2010

    default-extensions: NoImplicitPrelude

    other-extensions:   NoImplicitPrelude,
                        CPP, Safe,
                        Trustworthy,
                        Unsafe,
                        DeriveDataTypeable,
                        FlexibleInstances,
                        TypeSynonymInstances,
                        FlexibleContexts,
                        ExplicitNamespaces,
                        ExtendedDefaultRules,
                        BangPatterns

    other-modules:      Edmond.Algorithm.General.Core,
                        Edmond.Algorithm.General.Helpers,
                        Edmond.Algorithm.Bipartite.Core,
                        Edmond.Algorithm.Heuristics.MaxmialMatching,
                        Edmond.Algorithm.Heuristics.BGraphMaximumMatching,
                        Edmond.Data.AlternatingForest,
                        Edmond.Data.Graph.Core,
                        Util,
                        Parser

test-suite edmonds-test
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test, src
    main-is:            Spec.hs
    
    default-extensions: NoImplicitPrelude
    
    build-depends:      base,
                        protolude,
                        containers,
                        text,
                        random,
                        directory,
                        array,
                        vector,
                        hunit
    other-modules:      Edmond.Algorithm.General.Core,
                        Edmond.Algorithm.General.Helpers,
                        Edmond.Algorithm.Bipartite.Core,
                        Edmond.Algorithm.Heuristics.MaxmimalMatching,
                        Edmond.Algorithm.Heuristics.BGraphMaximumMatching,
                        Edmond.Data.AlternatingForest,
                        Edmond.Data.Graph.Core,
                        Util,
                        Parser,
                        TestGraph,
                        TestParser,
                        TestAlgorithm,
                        TestUtil,
                        Generator
    
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010

