name:                edmonds
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/edmonds#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- library
  -- hs-source-dirs:      src
  -- exposed-modules:     Lib
  -- build-depends:       base >= 4.7 && < 5
  -- default-language:    Haskell2010

executable edmonds-exe
  hs-source-dirs:      app, protolude/src, src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, 
                       containers,
                       ghc-prim,
                       text,
                       bytestring,
                       mtl,
                       stm,
                       hashable,
                       async,
                       deepseq,
                       safe,
                       random,
                       directory,
                       array,
                       split

  default-language:    Haskell2010

  default-extensions:  NoImplicitPrelude

  other-extensions:    NoImplicitPrelude,
                       CPP, Safe,
                       Trustworthy,
                       Unsafe,
                       DeriveDataTypeable,
                       FlexibleInstances,
                       TypeSynonymInstances,
                       FlexibleContexts,
                       ExplicitNamespaces,
                       ExtendedDefaultRules,
                       BangPatterns

  other-modules:       Applicative,
                       Base,
                       Bool           
                       Conv,
                       Debug,
                       Edmond.Algorithm.Core,
                       Edmond.Algorithm.Helpers,
                       Edmond.Data.AlternatingForest,
                       Edmond.Data.Graph,
                       Either,
                       Exceptions,
                       Functor,
                       Generator,
                       List,
                       Monad,
                       Panic,
                       Parser,
                       Protolude,
                       Semiring,
                       Show,
                       Util

test-suite edmonds-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , edmonds
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/edmonds
