name:                edmonds
version:             0.1.1.1
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/edmonds#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable edmonds-exe
    hs-source-dirs:     app, src
    main-is:            Main.hs
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    build-depends:      base >= 4.9.1.0 && <= 4.10.0.0, 
                        protolude == 0.1.10,
                        array == 0.5.1.1,
                        containers >= 0.5.7.1 && <= 0.5.10.2,
                        ghc-prim == 0.5.0.0,
                        text >= 1.2.2.1 && <= 1.2.2.2,
                        bytestring == 0.10.8.1,
                        mtl == 2.2.1,
                        stm == 2.4.4.1,
                        hashable == 1.2.6.1,
                        async == 2.1.1.1,
                        safe == 0.3.15,
                        random == 1.1,
                        directory >= 1.3.0.0 && <= 1.3.1.1

    default-language:   Haskell2010

    default-extensions: NoImplicitPrelude

    other-extensions:   NoImplicitPrelude,
                        CPP, Safe,
                        Trustworthy,
                        Unsafe,
                        DeriveDataTypeable,
                        FlexibleInstances,
                        TypeSynonymInstances,
                        FlexibleContexts,
                        ExplicitNamespaces,
                        ExtendedDefaultRules,
                        BangPatterns

    other-modules:       Applicative,
                         Base,
                         Bool           
                         Conv,
                         Debug,
                         Edmond.Algorithm.Core,
                         Edmond.Algorithm.Helpers,
                         Edmond.Data.AlternatingForest,
                         Edmond.Data.Graph,
                         Either,
                         Exceptions,
                         Functor,
                         Generator,
                         List,
                         Monad,
                         Panic,
                         Parser,
                         Protolude,
                         Semiring,
                         Show,
                         Util

test-suite edmonds-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , edmonds
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/edmonds
