name:                edmonds
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/edmonds#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/githubuser/edmonds

executable edmonds-matching
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base,
                       protolude,
                       containers,
                       ghc-prim,
                       text,
                       bytestring,
                       mtl,
                       stm,
                       hashable,
                       async,
                       deepseq,
                       safe,
                       random,
                       directory,
                       array,
                       split

  default-language:    Haskell2010

  default-extensions:  NoImplicitPrelude

  other-extensions:    NoImplicitPrelude,
                       CPP, Safe,
                       Trustworthy,
                       Unsafe,
                       DeriveDataTypeable,
                       FlexibleInstances,
                       TypeSynonymInstances,
                       FlexibleContexts,
                       ExplicitNamespaces,
                       ExtendedDefaultRules,
                       BangPatterns

  other-modules:       Edmond.Algorithm.Core,
                       Edmond.Algorithm.Helpers,
                       Edmond.Algorithm.Heuristics,
                       Edmond.Data.AlternatingForest,
                       Edmond.Data.Graph,
                       Util,
                       Parser

test-suite edmonds-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Spec.hs

  default-extensions:  NoImplicitPrelude

  build-depends:       base,
                       protolude,
                       containers,
                       text,
                       random,
                       directory,
                       array,
                       HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

